add: done with lab!

--- a/lab-1.qmd
+++ b/lab-1.qmd
@@ -1,11 +1,9 @@
 ---
 title: "Lab 1 - Quarto Warmup & STAT 331 Review"
-author: "YOUR NAME HERE"
+author: "Allen Choi"
 format: html
 embed-resources: true
 editor: source
-  markdown: 
-    wrap: 72
 execute: 
   echo: true
   warning: false
@@ -112,24 +110,46 @@ For these problems, we will continue to work with the `mpg` data frame, making v
 11. The `fl` variable describes the type of fuel for each car, with levels: `p`, `r`, `e`, `d`, and `c`. Do some research into what each of these labels mean! Then, use the `if_else()` function to create a new variable (`fuel_type`) with two levels: `petrol` (any car using petrolium-based gas) and `alternative energy` (any car not using petrolium-based gas).
 
 ```{r}
+mpg <- mpg
 
+mpg <- mpg |> 
+  mutate(fuel_type = if_else(
+    fl %in% c("c", "d"),
+    "alternative energy",
+    "petrol"
+  ))
 ```
 
 12. The `drv` variable describes if the car has front drive (`f`), rear drive (`r`), or four wheel drive (`4`). Let's make better labels for these values! Specifically, use the `case_when()` function to change the `drv` varible to have the following levels: `front`, `rear`, `four wheel`.
 
 ```{r}
-
+mpg <- mpg |> 
+  mutate(drv = case_when(
+    drv == "f" ~ "front",
+    drv == "r" ~ "rear",
+    drv == "4" ~ "four wheel"
+  ))
 ```
 
 (string split + remove extra ")" ) 13. The `trans` variable contains two pieces of information, (1) the transmission style (`auto` or `manual`) and the specific type of transmission (e.g., `l5`, `m5`). Using the `str_split()` function, create a new variable (`trans_type`) containing the specific type of transmission of each car. Once you've made this new variable, use the `rename()` function to change the name of the `trans` column to `trans_style`.\
 *Hint: You will need to deal with the stray parenthesis!*
 
 ```{r}
-
+mpg |> 
+  mutate(trans = str_split(trans, pattern = "[\\()]")[[1]][2]) |> 
+  rename(trans_type = trans)
 ```
 
 ## Getting to know your classmates
 
 14. Find someone who took Stat 331 from a different professor than you. Compare your experiences. Tell me their name and professor. List one or two things that you think you learned more about, and one or two things that they learned more about.
 
+Alisa Krasilnikov took Stat 331 with Dr. Robinson. We went over a lot more of GitHub tools and how to push/pull stuff. Alisa had a lot more exams and projects, and I believe they also had more hands-on data analysis work in groups. 
+
 15. Find someone in the class who **does not** share your birth month. Tell me their name and birthday, and use R to find out how many days apart your birthdays are.
+
+Alisa has a birth month of November. She is born on November 3, 2003. Mine is May 30, 2003
+```{r}
+as.Date("2003-05-30") - as.Date("2003-11-03")
+```
+
